# Learn-proxys

./: 404.html  BEST_REGULAR_LICENSES.txt  CUSTOM_GOOD_LICENSES.txt  GITHUB_LICENSES.txt  LICENSE  README.md  SECURITY.md  TIGL-MIT V1.0  TIGL_UNIVERSAL_TEMPLATE.txt  TODO.md  VM_vs_Proxy_ELI5.md  cocrea_profile_announcement.md  cocrea_profile_announcement.txt  github-bio.md  proxies-explained.md  tampermonkey-example.user.js
.github/: FUNDING.yml
404-variants/: README.md  comparison-go-rust.html  what-makes-ai-good.html
AdvancedVM/: README.md  RUN_INSTRUCTIONS.md  TODO.md  VM_SUMMARY.txt.md  docker-compose.yml  implementation_plan.md  start.bat
AdvancedVM/native/: CMakeLists.txt  build.sh  graphics.cpp  vm_instr.c
AdvancedVM/vm-core/: Cargo.toml  Dockerfile
AdvancedVM/vm-core/src/: cpu.rs  main.rs  vm.rs
KIDS_VICTORY_SYSTEM/: README.md  REAL_KIDS_RULE_SYSTEM.md  better_PARENTAL_ON_EXTRA_SECURITY.bat  better_PARENTAL_ON_NO_ADMIN.bat  better_README.md
MOVE TEST/: 10_MIN_INVISIBLE.md  1_CREATE_ASTROM.bat  2_HIDE_ASTROM.bat  ALL_IN_ONE_NO_ADMIN_STEALTH.bat  CREATE_ASTROM_NO_ADMIN.bat  CREATE_ASTROM_NO_ADMIN.ps1  ENABLE_DEFAULTACCOUNT.bat  FAMILY_TIME_LOG.txt  FINAL_DEFAULTACCOUNT_LAUNCHER.bat  FINAL_README_WORKING.md  HIDE_ASTROM_PERMANENT_NO_ADMIN.ps1  HIDE_DEFAULTACCOUNT_PERMANENT_NO_ADMIN.bat  HIDE_NO_ADMIN.bat  KID_PROOF_README.md  MANAGE_DEFAULTACCOUNT_NO_ADMIN.ps1  NO_ADMIN_EVER_FINAL.bat  PARENTAL_OFF_NO_ADMIN.bat  PARENTAL_ON_ADMIN.bat  PARENTAL_ON_EXTRA_SECURITY.bat  PARENTAL_ON_NUCLEAR.bat  README_Astrom_Stealth.md  README_NO_ADMIN_STEALTH.md  (+8 more)
(+90 files in other folders)
